# MONAN-JEDI

./: CMakeLists.txt  README.md  bundle.sh  common.sh  configure.sh  jaci.yaml  logs.sh  pbs.sh  stack.sh  template.yaml  test.sh
config/: jaci.yaml  template.yaml
docs/: BUNDLE_ORIGIN.md  JACI_MPAS_JEDI_BUILD_STEPS.md  MANUAL_MINIMAL_BUILD.md  MPAS-DOUBLE-PRECISION.md  YAML_CONFIGURATION.md
docs/known-issues/: JACI_IODA_BUFR_PYTHON.md  JACI_LGETKF_HEIGHT_VLOC.md
scripts/: 00_common.sh  02_prepare_jedi_bundle.sh  03_create_mpas_only_bundle.sh  04_configure_mpas_jedi.sh  05_build_mpas_jedi.sh  06_test_mpas_jedi.sh  06_test_mpas_jedi_pbs.sh  07_collect_logs.sh  08_diagnose_lgetkf_height_vloc.sh  09_clean_mpas_jedi_test_outputs.sh  10_audit_ctest_labels.sh  monan-jedi.sh
scripts/diagnostics/: 12_diagnose_ioda_bufr_python.sh
scripts/lib/: build.sh  bundle.sh  common.sh  config.sh  configure.sh  lfs_data.sh  logs.sh  obs2ioda.sh  pbs.sh  read_config.py  stack.sh  test.sh
templates/: CMakeLists.monan-jedi-mpas-only.txt
